--- a/style.css
+++ b/style.css
@@ -1,19 +1,34 @@
 .container {
     width: 800px;
-    height: 200px;
-    background-color: red;
     margin: 0 auto;
 }
 
 .menu {
-
+    margin-top: 34px;
 }
 
 .logo {
-
+    float: left;
 }
+
+.logo-text {
+    float: left;
+}
+
+.social {
+    float: right;
+    margin-top: 12px;
+}
+
+.social-space {
+    margin-left: 6px;
+}
+
 .logo img {
     margin-right: 6px;
+    float: left;  
+    margin-top: 6px;
+
 }
 
 .logo-name {
@@ -23,7 +38,8 @@
 }
 
 .logo-subtitle {
-    font-family: "Lato";
+    font-family: "BenchNine";
+    letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
 
@@ -31,6 +47,8 @@
 
 .divider {
     height: 10px;
+    margin: 30px 0;
     background-image: linear-gradient(45deg, #ffffff 16.67%, #999999 16.67%, #999999 50%, #ffffff 50%, #ffffff 66.67%, #999999 66.67%, #999999 100%);
     background-size: 4.24px 4.24px;
+    clear: both;
 }
