--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 .menu {
     margin-top: 34px;
+    margin-bottom: 30px;
 }
 
 .logo {
@@ -50,5 +51,7 @@
     margin: 30px 0;
     background-image: linear-gradient(45deg, #ffffff 16.67%, #999999 16.67%, #999999 50%, #ffffff 50%, #ffffff 66.67%, #999999 66.67%, #999999 100%);
     background-size: 4.24px 4.24px;
+}
+.clear {
     clear: both;
 }
