--- a/style.css
+++ b/style.css
@@ -77,3 +77,15 @@ h1 {
 .print {
     float: right;
 }
+
+.pizza {
+    width: 100%;
+    margin-top: 30px;
+}
+
+.desc {
+    font-size: 21px;
+    line-height: 1.3;
+    text-indent: 30px;
+    color:#666;
+}
