--- a/style.css
+++ b/style.css
@@ -113,3 +113,31 @@ h1 {
 .strike {
     text-decoration: line-through;
 }
+.headshot {
+    float: left;
+    vertical-align: top;
+    padding-right: 20px;
+}
+.author {
+    float: left;
+    color: #333;
+    width: 660px;
+}
+.author h2 {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+.author p {
+    font-size: 21px;
+    color:#666;
+
+}
+.share {
+    float: right;
+    background-color: rgb(217, 97, 62);
+    padding: 12px 40px;
+    color: white;
+    font-family: "BenchNine";
+    text-transform: uppercase;
+    font-size: 20px;
+}
