--- a/style.css
+++ b/style.css
@@ -152,3 +152,9 @@ h1 {
     transform: translateY(-50%);
     border: 10px solid white;
 }
+.endnote {
+    text-align: center;
+    color: #aaa;
+    margin-bottom: 50px;
+    font-size: 16px;
+}
